math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__assigment_with_space.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: x = 3.14
---
0: Letter('x')
2: Relation(Rel('='))
4: Number(Three)
5: Letter('.')
6: Number(One)
7: Number(Four)
