math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__begin_array.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "\\begin{array}{c|c}"
---
0: Begin
6: EnvName(Array)
13: StringLiteral("c|c")
