math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__color.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "{x\\color{red} y}"
---
0: GroupBegin
1: Letter('x')
2: Color
8: StringLiteral("red")
14: Letter('y')
15: GroupEnd
