math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__color_newline.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "{x\\color\n{red} y}"
---
0: GroupBegin
1: Letter('x')
2: Color
9: StringLiteral("red")
15: Letter('y')
16: GroupEnd
