math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__comment.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "ab%hello\ncd"
---
0: Letter('a')
1: Letter('b')
9: Letter('c')
10: Letter('d')
