math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__custom_space.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "{x\\hspace{2em}}"
---
0: GroupBegin
1: Letter('x')
2: CustomSpace
9: StringLiteral("2em")
14: GroupEnd
