math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__disallowed_chars.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "\\begin{matrix x + y}"
---
Error at 16: DisallowedChar('+')
