math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__early_error.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "{x + \\unknowncmd + y}"
---
Error at 5: UnknownCommand("unknowncmd")
